# sosguide

./: .gitignore  CMakeLists.txt  README.md  admobhelper.cpp  admobhelper.h  appmanager.cpp  appmanager.h  backbuttonfilter.cpp  backbuttonfilter.h  emergencycallhelper.cpp  emergencycallhelper.h  icons.qrc  localizationhelper.cpp  localizationhelper.h  main.cpp  offlinetranslator.cpp  offlinetranslator.h  qml.qrc
PlayStore/: app-ads.txt  index.html
android/: AndroidManifest.xml  build.gradle
android/src/org/amidlab/: AdMobHelper.java  OfflineTranslatorHelper.java
cert/: sosguide-release-key.jks
qml/: AboutPage.qml  AggressiveAnimalsPage.qml  AppliancesPage.qml  BalanceTrainingPage.qml  BicycleSafetyPage.qml  BleedingPage.qml  BrakeFailurePage.qml  BrakingPage.qml  BurnsCutsPage.qml  BurnsPage.qml  CarAccidentPage.qml  CarFirePage.qml  CarSafetyPage.qml  ChainSlippagePage.qml  ChemicalsPage.qml  ChildproofingPage.qml  ChokingPage.qml  CprPage.qml  CyclingInjuriesPage.qml  DehydrationPage.qml  ElectricalSafetyPage.qml  EmergencyKitPage.qml  EngineOverheatPage.qml  EvacuationPage.qml  FirePreventionPage.qml  FirstAidDetailPage.qml  FirstAidPage.qml  FlatTirePage.qml  FracturesPage.qml  GasLeakPage.qml  GymEquipmentPage.qml  GymInjuriesPage.qml  GymSafetyPage.qml  HeartAttackPage.qml  HelmetPage.qml  HomeSafetyPage.qml  HydrationPage.qml  HypothermiaSignsPage.qml  JumpstartPage.qml  Main.qml  (+17 more)
